apa000ser.yml
apiVersion: v1
kind: Service
metadata:
  name: apa000ser
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: apa000kube
