ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apa000kube
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apa000ser
            port:
              number: 80
